[tool.poetry]
name = "neural-junction"
version = "0.1.0"
description = "Distributed AI agent orchestration system"
authors = ["Engineer <engineer@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.68.0"
uvicorn = "^0.18.2"
docker = "^5.0.3"
pydantic = "^1.9.1"
hypercorn = "^0.14.0"
asyncpg = "^0.25.0"
sqlalchemy = "^1.4.40"
pytest = "^7.1.2"
pytest-asyncio = "^0.20.1"
